--- a/packages/resource-overview/src/resource-overview.css
+++ b/packages/resource-overview/src/resource-overview.css
@@ -440,7 +440,7 @@ p.osc-searchtext {
   background-color: #ec673e;
 }
 .bgColor-7DB47B {
-  background-color: #7db47b;
+  background-color: #3e7a3c;
 }
 .bgColor-98BFE6 {
   background-color: #98bfe6;
